Bug 2026814: Include fade on smart window chat wrapper and adjust auto scroll r=ai-frontend-reviewers,echa
Goal: Include a fade on top and bottom of the smart window chat content

What was done:
- Added the fade using mask-image, similar approach to the fade in the tabs
- Made the sidebar-header (that has the create new chat button for the sidebar) absolute positioned and added a ~4px margin to the top. Both to make it look closer to Figma
- Added a resize observer to detect when the scrollbar appears to add/remove the fade
- Added `this.shadowRoot?.querySelector(".chat-inner-wrapper")?.style.removeProperty("--content-height");` to recalculate the chat inner content height, this was the same for all tabs and was causing the sidebar scrollbar to show up when it shouldn't
- Added the ~4px margin to the scrolling calculation

Differential Revision: https://phabricator.services.mozilla.com/D290626

--- a/browser/components/aiwindow/ui/components/ai-window/ai-window.css
+++ b/browser/components/aiwindow/ui/components/ai-window/ai-window.css
@@ -29,12 +29,11 @@
 
 :host([mode="sidebar"]) {
   grid-template-areas:
-    "sidebar-header"
     "browser"
     "prompts"
     "smartbar"
     "disclaimer";
-  grid-template-rows: auto 1fr auto auto auto;
+  grid-template-rows: 1fr auto auto auto;
   --smartbar-width: calc(100% - var(--space-large));
 }
 
@@ -49,12 +48,11 @@
 
 :host([mode="fullpage"].chat-active) {
   grid-template-areas:
-    "fullpage-header"
     "browser"
     "prompts"
     "smartbar"
     "disclaimer";
-  grid-template-rows: auto 1fr auto auto auto;
+  grid-template-rows: 1fr auto auto auto;
 
   & .fullpage-header {
     display: flex;
@@ -63,11 +61,10 @@
 
 :host([mode="sidebar"].chat-active) {
   grid-template-areas:
-    "sidebar-header"
     "browser"
     "smartbar"
     "disclaimer";
-  grid-template-rows: auto 1fr auto auto;
+  grid-template-rows: 1fr auto auto;
 }
 
 #browser-container {
@@ -128,6 +125,8 @@ smartwindow-prompts {
   grid-area: sidebar-header;
   justify-content: flex-end;
   padding: var(--space-small);
+  position: absolute;
+  top: 0;
   width: 100%;
 }
 
@@ -137,6 +136,8 @@ smartwindow-prompts {
   grid-area: fullpage-header;
   justify-content: flex-end;
   padding: var(--space-small);
+  position: absolute;
+  top: 0;
   width: 100%;
 }
 
